# array-modifier-app

./: .gitignore  CMakeLists.txt  README.md
include/: array.h  core_methods.h  search_methods.h  sorting_methods.h  statistical_methods.h  transformation_methods.h  utils.h
src/: main.c
src/methods/: core_methods.c  search_methods.c  sorting_methods.c  statistical_methods.c  transformation_methods.c
src/methods/core/: core_methods.c  display_core_methods.c  op_core_methods.c
src/methods/search/: display_search_methods.c  op_search_methods.c  search_methods.c
src/methods/sorting/: display_sorting_methods.c  op_sorting_methods.c  sorting_methods.c
src/methods/statistical/: display_statistical_methods.c  op_statistical_methods.c  statistical_methods.c
src/methods/transformation/: display_transformation_methods.c  op_transformation_methods.c  transformation_methods.c
src/utils/: utils.c
